nuevos archivos: app/chart_pie_final_este_si.png 	modificados:     app/charts.py 	nuevos archivos: app/docker-compose.yml 	nuevos archivos: app/dockerfile 	nuevos archivos: app/imgs/Brazil.png 	modificados:     web-server/docker-compose.yml 	modificados:     web-server/dockerfile

--- a/web-server/docker-compose.yml
+++ b/web-server/docker-compose.yml
@@ -1,5 +1,9 @@
 services:
-  app-csv:
+  web-server:
     build:
       context: .
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+    ports:
+      - '80:80'
